force-app/main/default/objects/Order_Line_Item__c/fields/Booking_Order__c.field-meta.xml
<CustomField>
    <fullName>Booking_Order__c</fullName>
    <description>Parent booking/order</description>
    <label>Booking Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>