force-app/main/default/objects/Order_Line_Item__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <formula>Unit_Price__c  *  Quantity__c  * (VALUE(
IF(
ISBLANK(Tax_Rate__c),
&quot;0&quot;,
Tax_Rate__c
)
) / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>